--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.1",
     "prettier": "^1.19.1",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11"
   },
