--- a/.eslintrc
+++ b/.eslintrc
@@ -7,14 +7,19 @@
     "plugin:vue/essential",
     "eslint:recommended",
     "@vue/prettier",
-    "@vue/standard"
+    "@vue/standard",
+    "prettier"
   ],
   "parserOptions": {
     "parser": "babel-eslint"
   },
   "rules": {
     "quotes": [1, "double"],
-    "semi": [1, "always"]
-  },
-  "plugins": ["import"]
+    "semi": [1, "always"],
+    "space-before-function-paren": ["error", {
+      "anonymous": "never",
+      "named": "never",
+      "asyncArrow": "always"
+    }]
+  }
 }
