--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "core-js": "^3.6.5",
+    "dayjs": "^1.9.1",
     "firebase": "^7.23.0",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
