--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-youtube": "^1.4.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
